--- a/React/FrontEnd/dio/package.json
+++ b/React/FrontEnd/dio/package.json
@@ -11,7 +11,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.7.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
